--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ nav ul li, footer ul li {
 a 
 {
     text-decoration: none;
-    color: #999;
+    color: #6B8E23;
 }
 a:hover 
 {
@@ -36,8 +36,7 @@ p
 
 footer 
 {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+    border-top: 1px solid #808000;
 }
 
 
