--- a/css/main.css
+++ b/css/main.css
@@ -24,16 +24,17 @@ a:hover
     text-decoration: underline;
 }
 
+/*Title styling*/
 h1 
 {
-    font-size: 3em;
+    font-size: 4.2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p 
 {
     font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
+    line-height: 1.35em;
+    color: #556B2F;
 }
 
 /*Style footer color*/
